[tool.poetry]
name = "adrestia"
version = "0.1.0"
description = "ReadTheDocs build"
authors = ["Adrestia Team <adrestia@iohk.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = ">=2,<4"
readthedocs-sphinx-ext = "<1.1"
myst-parser = "^0.12.10"
sphinx-rtd-theme = "^0.5.0"
sphinxemoji = "^0.1.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
